Frontend refactor + working hello world

--- a/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/Pages/PredictionForm.razor
+++ b/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/Pages/PredictionForm.razor
@@ -2,7 +2,7 @@
 @using WSBInvestmentPredictor.Prediction.Services
 @inject PredictionService Predictor
 
-@page "/predict"
+@page "/test"
 @inject PredictionService Predictor
 
 <h3>📈 Predict 30-Day Stock Return</h3>
