--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/_Imports.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/_Imports.razor
@@ -2,3 +2,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using WSBInvestmentPredictor.Frontend.Shared.Navigation
+@using WSBInvestmentPredictor.Frontend.Shared.Layout
