--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Routes.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Routes.razor
@@ -1,4 +1,11 @@
 ﻿@using System.Reflection
-@using WSBInvestmentPredictor.Frontend.Wasm
+@using Microsoft.AspNetCore.Components.Routing
+@using WSBInvestmentPredictor.Frontend.Shared.Layout
 
-@Defaults.GetDefaultRouter(typeof(Routes).Assembly, Routes.AdditionalAssemblies)
+@Defaults.GetDefaultRouter(typeof(Program).Assembly, AdditionalAssemblies)
+
+@code {
+    public static List<Assembly> AdditionalAssemblies = [
+        typeof(WSBInvestmentPredictor.Prediction.DI).Assembly
+        ];
+}
