--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Navigation/NavMenu.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Navigation/NavMenu.razor
@@ -1,12 +1,15 @@
 ﻿@using WSBInvestmentPredictor.Frontend.Shared.Navigation
+@inject NavigationRegistry NavigationRegistry
+
 
 <ul class="nav flex-column">
     @foreach (var link in NavigationRegistry.Links)
     {
         <li class="nav-item">
             <NavLink class="nav-link" href="@link.Url" Match="NavLinkMatch.All">
-                @link.Label
+                @link.Title
             </NavLink>
         </li>
     }
+    <p>Liczba linków: @NavigationRegistry.Links?.Count()</p>
 </ul>
