Working notifcation + move code logic to razor.cs file

--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Layout/MainLayout.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@namespace WSBInvestmentPredictor.Frontend.Shared.Layout
 @inherits LayoutComponentBase
-
+<RadzenNotification />
 <div class="d-flex flex-column vh-100">
     <!-- Navbar -->
     <header class="navbar navbar-expand bg-primary navbar-dark px-3">
