--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
@@ -21,6 +21,7 @@
 
     public static RenderFragment Scripts => @<div>
         <script src="_framework/blazor.webassembly.js"></script>
+        <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
     </div>;
 
     public static RenderFragment GetDefaultRouter(Assembly appAssembly, IEnumerable<Assembly> additionalAssemblies)
