--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Server/Components/App.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Server/Components/App.razor
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <HeadOutlet @rendermode="new InteractiveWebAssemblyRenderMode(false)" />
     @Defaults.Links
-    <RadzenTheme Theme="material"/>
+    <RadzenTheme Theme="material" @rendermode="RenderMode.InteractiveAuto" />
 </head>
 
 <body>
