--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/_Imports.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/_Imports.razor
@@ -3,3 +3,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using WSBInvestmentPredictor.Frontend.Shared.Navigation
 @using WSBInvestmentPredictor.Frontend.Shared.Layout
+@using Radzen
+@using Radzen.Blazor
