--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/_Imports.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using WSBInvestmentPredictor.Frontend.Wasm
+@using Radzen
+@using Radzen.Blazor
