--- a/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/_Imports.razor
+++ b/Frontend/src/Prediction/WSBInvestmentPredictor.Prediction/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using WSBInvestmentPredictor.Prediction
+@using Radzen
+@using Radzen.Blazor
