--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
@@ -6,6 +6,7 @@
 @code {
     public static RenderFragment Links => @<div>
         <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css" />
+        <link href="_content/Radzen.Blazor/css/default.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="all" />
     </div>;
 
