--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Wasm/Defaults.razor
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css" />
         <link href="_content/Radzen.Blazor/css/default.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" media="all" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     </div>;
 
     public static RenderFragment WasmLoader => @<div id="wasm-progress" class="d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
